--- a/app/views/colors/new.html.erb
+++ b/app/views/colors/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', color: @color %>
 
-<%= link_to 'Back', colors_path %>
+<%= link_to BUTTON[:RETURN_NAME], colors_path, class: 'btn btn-primary' %>
