--- a/app/views/colors/_form.html.erb
+++ b/app/views/colors/_form.html.erb
@@ -1,27 +1,38 @@
-<%= form_with(model: color, local: true) do |form| %>
-  <% if color.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(color.errors.count, "error") %> prohibited this color from being saved:</h2>
+<%= form_with(model: color, local: true, html: {class: 'form-horizontal'}) do |form| %>
+    <% if color.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(color.errors.count, "error") %> prohibited this color from being saved:</h2>
 
-      <ul>
-      <% color.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% color.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class='form-group'>
+      <label class="col-sm-3 control-label">
+        <%= form.label :name %>
+      </label>
+      <div class='col-sm-9'>
+        <%= form.text_field :name, id: :color_name, class: 'form-control' %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :color_name %>
-  </div>
+    <div class='form-group'>
+      <label class="col-sm-3 control-label">
+        <%= form.label :note %>
+      </label>
+      <div class='col-sm-9'>
+        <%= form.text_field :note, id: :color_note, class: 'form-control' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :note %>
-    <%= form.text_field :note, id: :color_note %>
-  </div>
+    <div class='form-group'>
+      <div class='col-sm-offset-3 col-sm-9'>
+        <%= form.submit class: 'btn btn-success' %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
