--- a/app/views/colors/show.html.erb
+++ b/app/views/colors/show.html.erb
@@ -1,14 +1,21 @@
-<p id="notice"><%= notice %></p>
+<form class="form-horizontal">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @color.name %>
-</p>
+  <div class='form-group'>
+    <label class="col-sm-2 control-label">名前</label>
+    <div class='col-sm-10'>
+      <p class="form-control-static"><%= @color.name %></p>
+    </div>
+  </div>
 
-<p>
-  <strong>Note:</strong>
-  <%= @color.note %>
-</p>
+  <div class='form-group'>
+    <label class="col-sm-2 control-label">備考</label>
+    <div class='col-sm-10'>
+      <p class="form-control-static"><%= @color.note %></p>
+    </div>
+  </div>
 
-<%= link_to 'Edit', edit_color_path(@color) %> |
-<%= link_to 'Back', colors_path %>
+</form>
+
+<%= link_to BUTTON[:EDIT_NAME], edit_color_path(@color), class: 'btn btn-primary' %>
+<%= link_to BUTTON[:RETURN_NAME], colors_path, class: 'btn btn-primary' %>
