--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,21 @@
   </head>
 
   <body>
-  <% if staff_signed_in? %>
-      <%= link_to 'トップ', root_path %>
-      <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete %>
-  <% else %>
-  <% end %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class='container'>
+      <header>
+        <nav>
+          <ul class="nav navbar-right">
+            <% if staff_signed_in? %>
+                <%= link_to 'トップ', root_path, class: 'btn btn-primary' %>
+                <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete, class: 'btn btn-primary' %>
+            <% else %>
+            <% end %>
+          </ul>
+        </nav>
+      </header>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </div>
   </body>
 </html>
