外部端子管理を追加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,5 @@
 
 <%= link_to 'カラー管理', colors_path, class: 'btn btn-primary' %>
 <hr>
+<%= link_to '外部端子管理', contacts_path, class: 'btn btn-primary' %>
+<hr>
