商品検索を追加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <h1>管理画面</h1>
 <hr>
 
+<%= link_to '商品検索', items_path, class: 'btn btn-primary' %>
+<hr>
 <%= link_to 'カラー管理', colors_path, class: 'btn btn-primary' %>
 <hr>
 <%= link_to '外部端子管理', contacts_path, class: 'btn btn-primary' %>
