--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,24 +1,65 @@
-<p id="notice"><%= notice %></p>
-
 <h1>商品検索</h1>
+<br>
 
+<form class='form-horizontal'>
+  <%= search_form_for(@q, url: items_path, html: {class: 'form-horizontal'}) do |f| %>
+      <div class='form-group'>
+        <label class="col-sm-3 control-label">シリーズ名：</label>
+        <div class='col-sm-4'>
+          <%= f.search_field :series_cont, class: 'form-control' %>
+        </div>
+        <label class="col-sm-1 control-label">型番：</label>
+        <div class='col-sm-4'>
+          <%= f.search_field :type_number_cont, class: 'form-control' %>
+        </div>
+      </div>
+      <div class='form-group'>
+        <label class="col-sm-3 control-label">商品名：</label>
+        <div class='col-sm-4'>
+          <%= f.search_field :item_name_cont, class: 'form-control' %>
+        </div>
+      </div>
+      <div class='form-group'>
+        <div class='col-sm-offset-3 col-sm-9'>
+          <%= f.submit '検索', class: 'btn btn-success' %>
+        </div>
+      </div>
+  <% end %>
+</form>
+<hr>
 <table class='table table-striped table-hover table-bordered'>
   <thead>
-    <tr>
-      <th><div class="text-center">Series</div></th>
-      <th><div class="text-center">Type number</div></th>
-      <th><div class="text-center">Item name</div></th>
-      <th><div class="text-center">Tax excluded</div></th>
-      <th><div class="text-center">Tax included</div></th>
-      <th><div class="text-center">Special</div></th>
-      <th><div class="text-center">Color</div></th>
-      <th><div class="text-center">Contact</div></th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>
+      <div class="text-center">シリーズ名</div>
+    </th>
+    <th>
+      <div class="text-center">型番</div>
+    </th>
+    <th>
+      <div class="text-center">商品名</div>
+    </th>
+    <th>
+      <div class="text-center">税抜き価格</div>
+    </th>
+    <th>
+      <div class="text-center">税込み価格</div>
+    </th>
+    <th>
+      <div class="text-center">特徴</div>
+    </th>
+    <th>
+      <div class="text-center">カラー</div>
+    </th>
+    <th>
+      <div class="text-center">外部端子</div>
+    </th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @items.each do |item| %>
+  <% @items.each do |item| %>
       <tr>
         <td><%= item.series %></td>
         <td><%= item.type_number %></td>
@@ -32,7 +73,7 @@
         <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary' %></td>
         <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary' %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
