--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -57,6 +57,19 @@
     </div>
   </div>
 
+  <div class='form-group'>
+    <label class="col-sm-2 control-label">画像</label>
+    <div class='col-sm-10'>
+      <p class="form-control-static">
+        <% if @item.image? %>
+          <div class="thumbnail">
+            <%= image_tag @item.image.url %>
+          </div>
+      <% end %>
+      </p>
+    </div>
+  </div>
+
 </form>
 
 <%= link_to BUTTON[:EDIT_NAME], edit_item_path(@item), class: 'btn btn-primary' %>
