--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -52,7 +52,9 @@
   <div class='form-group'>
     <label class="col-sm-2 control-label">外部端子</label>
     <div class='col-sm-10'>
-      <p class="form-control-static"><%= @item.contact.name %></p>
+      <p class="form-control-static">
+        <%= contact_name_join(@item) %>
+      </p>
     </div>
   </div>
 
