--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,35 +1,37 @@
-<h1>商品検索</h1>
-<br>
-
-<form class='form-horizontal'>
-  <%= search_form_for(@q, url: items_path, html: {class: 'form-horizontal'}) do |f| %>
-      <div class='form-group'>
-        <label class="col-sm-3 control-label">シリーズ名：</label>
-        <div class='col-sm-4'>
-          <%= f.search_field :series_cont, class: 'form-control' %>
+<div class="panel panel-primary">
+  <div class="panel-heading">商品一覧表</div>
+</div>
+<div class="well well-sm">
+  <form class='form-horizontal'>
+    <%= search_form_for(@q, url: items_path, html: {class: 'form-horizontal'}) do |f| %>
+        <div class='form-group'>
+          <label class="col-sm-3 control-label">シリーズ名：</label>
+          <div class='col-sm-4'>
+            <%= f.search_field :series_cont, class: 'form-control' %>
+          </div>
+          <label class="col-sm-1 control-label">型番：</label>
+          <div class='col-sm-4'>
+            <%= f.search_field :type_number_cont, class: 'form-control' %>
+          </div>
         </div>
-        <label class="col-sm-1 control-label">型番：</label>
-        <div class='col-sm-4'>
-          <%= f.search_field :type_number_cont, class: 'form-control' %>
+        <div class='form-group'>
+          <label class="col-sm-3 control-label">商品名：</label>
+          <div class='col-sm-4'>
+            <%= f.search_field :item_name_cont, class: 'form-control' %>
+          </div>
         </div>
-      </div>
-      <div class='form-group'>
-        <label class="col-sm-3 control-label">商品名：</label>
-        <div class='col-sm-4'>
-          <%= f.search_field :item_name_cont, class: 'form-control' %>
+        <div class='form-group'>
+          <div class='col-sm-offset-3 col-sm-9'>
+            <%= f.submit '検索', class: 'btn btn-success' %>
+            <%= link_to 'クリア', items_path, class: 'btn btn-success' %>
+          </div>
         </div>
-      </div>
-      <div class='form-group'>
-        <div class='col-sm-offset-3 col-sm-9'>
-          <%= f.submit '検索', class: 'btn btn-success' %>
-        </div>
-      </div>
-  <% end %>
-</form>
-<hr>
-<table class='table table-striped table-hover table-bordered'>
+    <% end %>
+  </form>
+</div>
+<table class='table table-hover table-bordered table-condensed'>
   <thead>
-  <tr>
+  <tr class="active">
     <th>
       <div class="text-center">シリーズ名</div>
     </th>
@@ -42,12 +44,12 @@
     <th>
       <div class="text-center">税抜き価格</div>
     </th>
-    <th>
-      <div class="text-center">税込み価格</div>
-    </th>
-    <th>
-      <div class="text-center">特徴</div>
-    </th>
+    <!--<th>-->
+    <!--<div class="text-center">税込み価格</div>-->
+    <!--</th>-->
+    <!--<th>-->
+    <!--<div class="text-center">特徴</div>-->
+    <!--</th>-->
     <th>
       <div class="text-center">カラー</div>
     </th>
@@ -68,14 +70,20 @@
         <td><%= item.type_number %></td>
         <td><%= item.item_name %></td>
         <td><%= item.tax_excluded %></td>
-        <td><%= item.tax_included %></td>
-        <td><%= item.special %></td>
+        <% if false %>
+            <td><%= item.tax_included %></td>
+            <td><%= item.special %></td>
+        <% end %>
         <td><%= item.color.name %></td>
         <td><%= contact_name_join(item) %></td>
-        <td><%= item.image %></td>
-        <td><%= link_to BUTTON[:SHOW_NAME], item, class: 'btn btn-primary' %></td>
-        <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary' %></td>
-        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary' %></td>
+        <td align="center">
+          <% if item.image? %>
+              <%= image_tag item.image.thumb.url %>
+          <% end %>
+        </td>
+        <td><%= link_to BUTTON[:SHOW_NAME], item, class: 'btn btn-primary btn-block' %></td>
+        <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary btn-block' %></td>
+        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary btn-block' %></td>
       </tr>
   <% end %>
   </tbody>
