--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,19 @@
 <form class="form-horizontal">
 
   <div class='form-group'>
+    <label class="col-sm-2 control-label"></label>
+    <div class='col-sm-10'>
+      <p class="form-control-static">
+        <% if @item.image? %>
+          <div class="thumbnail">
+            <%= image_tag @item.image.url %>
+          </div>
+      <% end %>
+      </p>
+    </div>
+  </div>
+
+  <div class='form-group'>
     <label class="col-sm-2 control-label">シリーズ名</label>
     <div class='col-sm-10'>
       <p class="form-control-static"><%= @item.series %></p>
@@ -54,19 +67,6 @@
     <div class='col-sm-10'>
       <p class="form-control-static">
         <%= contact_name_join(@item) %>
-      </p>
-    </div>
-  </div>
-
-  <div class='form-group'>
-    <label class="col-sm-2 control-label">画像</label>
-    <div class='col-sm-10'>
-      <p class="form-control-static">
-        <% if @item.image? %>
-          <div class="thumbnail">
-            <%= image_tag @item.image.url %>
-          </div>
-      <% end %>
       </p>
     </div>
   </div>
