--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -69,7 +69,7 @@
         <td><%= item.series %></td>
         <td><%= item.type_number %></td>
         <td><%= item.item_name %></td>
-        <td><%= item.tax_excluded %></td>
+        <td><%= number_to_currency(item.tax_excluded, unit: '¥', format: '%u%n', precision: 0) %></td>
         <% if false %>
             <td><%= item.tax_included %></td>
             <td><%= item.special %></td>
