--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SAMPLE</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>SAMPLE</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <div class='container'>
-      <header>
-        <nav>
-          <ul class="nav navbar-right">
-            <% if staff_signed_in? %>
-                <%= link_to 'トップ', root_path, class: 'btn btn-primary' %>
-                <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete, class: 'btn btn-primary' %>
-            <% else %>
-            <% end %>
+<body>
+
+<% if staff_signed_in? %>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to '管理画面', items_path, class: 'navbar-brand' %>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul id="navbar-list-menu" class="nav navbar-nav">
+            <!-- スマホ用のメニュー部分 -->
+            <%= sidebar_list_items() %>
           </ul>
-        </nav>
-      </header>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+          <p class="navbar-text navbar-right" style="margin-right:0px;">
+            <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete, class: 'navbar-link' %>
+          </p>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <!-- PC用のメニュー部分 -->
+            <%= sidebar_list_items() %>
+          </ul>
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <% if flash[:notice] %>
+              <div class="alert alert-info"><%= flash[:notice] %></div>
+          <% end %>
+          <% if flash[:error] %>
+              <div class="alert alert-danger"><%= flash[:error] %></div>
+          <% end %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+<% else %>
+    <div class='container'>
       <%= yield %>
     </div>
-  </body>
+<% end %>
+
+</body>
 </html>
