--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Contact</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">外部端子</div>
+</div>
 <%= render 'form', contact: @contact %>
 
-<%= link_to BUTTON[:SHOW_NAME], @contact, class: 'btn btn-primary' %>
 <%= link_to BUTTON[:RETURN_NAME], contacts_path, class: 'btn btn-primary' %>
