--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Contact</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">外部端子</div>
+</div>
 <%= render 'form', contact: @contact %>
 
 <%= link_to BUTTON[:RETURN_NAME], contacts_path, class: 'btn btn-primary' %>
