--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Item</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">商品</div>
+</div>
 <%= render 'form', item: @item %>
 
 <%= link_to BUTTON[:RETURN_NAME], items_path, class: 'btn btn-primary' %>
