--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,6 @@
+<div class="panel panel-primary">
+  <div class="panel-heading">商品</div>
+</div>
 <form class="form-horizontal">
 
   <div class='form-group'>
