--- a/app/views/colors/index.html.erb
+++ b/app/views/colors/index.html.erb
@@ -1,11 +1,16 @@
-<h1>カラー</h1>
-
-<table class='table table-striped table-hover table-bordered'>
+<div class="panel panel-primary">
+  <div class="panel-heading">カラー</div>
+</div>
+<table class='table table-hover table-bordered table-condensed'>
   <thead>
-  <tr>
-    <th><div class="text-center">名前</div></th>
-    <th><div class="text-center">備考</div></th>
-    <th colspan="3"></th>
+  <tr class="active">
+    <th>
+      <div class="text-center">名前</div>
+    </th>
+    <th>
+      <div class="text-center">メモ</div>
+    </th>
+    <th colspan="2" style="width:1%"></th>
   </tr>
   </thead>
 
@@ -14,7 +19,9 @@
       <tr>
         <td><%= color.name %></td>
         <td><%= color.note %></td>
-        <td><%= link_to BUTTON[:SHOW_NAME], color, class: 'btn btn-primary' %></td>
+        <% if false %>
+            <td><%= link_to BUTTON[:SHOW_NAME], color, class: 'btn btn-primary' %></td>
+        <% end %>
         <td><%= link_to BUTTON[:EDIT_NAME], edit_color_path(color), class: 'btn btn-primary' %></td>
         <td><%= link_to BUTTON[:DELETE_NAME], color, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary' %></td>
       </tr>
@@ -24,4 +31,4 @@
 
 <br>
 
-<%= link_to BUTTON[:CREATE_NAME], new_color_path, class: 'btn btn-primary' %>
+<%= link_to BUTTON[:CREATE_NAME], new_color_path, class: 'btn btn-danger' %>
