--- a/app/views/colors/new.html.erb
+++ b/app/views/colors/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Color</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">カラー</div>
+</div>
 <%= render 'form', color: @color %>
 
 <%= link_to BUTTON[:RETURN_NAME], colors_path, class: 'btn btn-primary' %>
