--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,3 +1,6 @@
+<div class="panel panel-primary">
+  <div class="panel-heading">外部端子</div>
+</div>
 <form class="form-horizontal">
 
   <div class='form-group'>
@@ -8,7 +11,7 @@
   </div>
 
   <div class='form-group'>
-    <label class="col-sm-2 control-label">備考</label>
+    <label class="col-sm-2 control-label">メモ</label>
     <div class='col-sm-10'>
       <p class="form-control-static"><%= @contact.note %></p>
     </div>
