--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Editing Item</h1>
-
+<div class="panel panel-primary">
+  <div class="panel-heading">商品</div>
+</div>
 <%= render 'form', item: @item %>
 
 <%= link_to BUTTON[:SHOW_NAME], @item, class: 'btn btn-primary' %>
