--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -59,7 +59,7 @@
     <th>
       <div class="text-center">画像</div>
     </th>
-    <th colspan="3"></th>
+    <th colspan="3" style="width:1%"></th>
   </tr>
   </thead>
 
@@ -81,9 +81,9 @@
               <%= image_tag item.image.thumb.url %>
           <% end %>
         </td>
-        <td><%= link_to BUTTON[:SHOW_NAME], item, class: 'btn btn-primary btn-block' %></td>
-        <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary btn-block' %></td>
-        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary btn-block' %></td>
+        <td><%= link_to BUTTON[:SHOW_NAME], item, class: 'btn btn-primary' %></td>
+        <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary' %></td>
+        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary' %></td>
       </tr>
   <% end %>
   </tbody>
@@ -91,4 +91,4 @@
 
 <br>
 
-<%= link_to BUTTON[:CREATE_NAME], new_item_path, class: 'btn btn-primary' %>
+<%= link_to "新規商品登録", new_item_path, class: 'btn btn-danger' %>
