--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,8 +22,8 @@
         </div>
         <div class='form-group'>
           <div class='col-sm-offset-3 col-sm-9'>
-            <%= f.submit '検索', class: 'btn btn-success' %>
-            <%= link_to 'クリア', items_path, class: 'btn btn-success' %>
+            <%= f.submit '検索', class: 'btn btn-primary' %>
+            <%= link_to 'クリア', items_path, class: 'btn btn-primary' %>
           </div>
         </div>
     <% end %>
@@ -83,7 +83,7 @@
         </td>
         <td><%= link_to BUTTON[:SHOW_NAME], item, class: 'btn btn-primary' %></td>
         <td><%= link_to BUTTON[:EDIT_NAME], edit_item_path(item), class: 'btn btn-primary' %></td>
-        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-primary' %></td>
+        <td><%= link_to BUTTON[:DELETE_NAME], item, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %></td>
       </tr>
   <% end %>
   </tbody>
@@ -91,4 +91,4 @@
 
 <br>
 
-<%= link_to "新規商品登録", new_item_path, class: 'btn btn-danger' %>
+<%= link_to "新規商品登録", new_item_path, class: 'btn btn-primary' %>
