--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <body>
 
 <% if staff_signed_in? %>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: gray">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to '管理画面', items_path, class: 'navbar-brand' %>
+          <%= link_to '管理画面', items_path, class: 'navbar-brand', style: 'color: white' %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="navbar-list-menu" class="nav navbar-nav">
@@ -27,7 +27,7 @@
             <%= sidebar_list_items() %>
           </ul>
           <p class="navbar-text navbar-right" style="margin-right:0px;">
-            <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete, class: 'navbar-link' %>
+            <%= link_to 'ログアウト', destroy_staff_session_path, method: :delete, class: 'navbar-link', style: 'color: white' %>
           </p>
         </div>
       </div>
