--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -91,4 +91,4 @@
 
 <br>
 
-<%= link_to "新規商品登録", new_item_path, class: 'btn btn-primary' %>
+<%= link_to "新規登録", new_item_path, class: 'btn btn-primary' %>
